platform/argocd/foundations/45debed3-62e3-4101-b699-c6ce0f60b68c.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc456-helm-20260913053601-94d048-desktop
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 45debed3-62e3-4101-b699-c6ce0f60b68c
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: 6a8ce392-6b67-4528-b61c-a687dad77c06
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc456-helm-20260913053601-94d048-desktop
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 45debed3-62e3-4101-b699-c6ce0f60b68c
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: 6a8ce392-6b67-4528-b61c-a687dad77c06
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc456-helm-20260913053601-94d048-desktop
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 45debed3-62e3-4101-b699-c6ce0f60b68c
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: 6a8ce392-6b67-4528-b61c-a687dad77c06
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-http01-solver-ingress
  namespace: kp-rc456-helm-20260913053601-94d048-desktop
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 45debed3-62e3-4101-b699-c6ce0f60b68c
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: 6a8ce392-6b67-4528-b61c-a687dad77c06
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuberploy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8089
